--- a/shorturl/templates/shorturl/index.html
+++ b/shorturl/templates/shorturl/index.html
@@ -1,1 +1,20 @@
 {% extends 'shorturl/base.html' %}
+{% load shorturl_tags %}
+
+{% block content %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_bootstrap }}
+        <button type="submit" class="btn btn-primary">Generate short URL</button>
+    </form>
+    <br/>
+
+    {% if obj %}
+        <div class="well">
+            <blockquote>
+                <p>The Short URL was created</p>
+                <footer>{% full_shorturl obj.get_info.short_url %} (<a href="{% url 'service' obj.get_info.short_url %}" target="_blank">Open in new window</a>)</footer>
+            </blockquote>
+        </div>
+    {% endif %}
+{% endblock %}
